--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,2 +1,11 @@
+certifi==2024.7.4
+charset-normalizer==3.3.2
 confluent-kafka==2.2.0
+Events==0.5
+idna==3.7
 kafka-python==2.0.2
+opensearch-py==2.6.0
+python-dateutil==2.9.0.post0
+requests==2.32.3
+six==1.16.0
+urllib3==1.26.19
